# manhuaviewer

./: .gitignore  .npmrc  AGENTS.md  ANALYSIS_REPORT_2026-04-23.md  ANALYSIS_REPORT_2026-04-30.md  ANALYSIS_REPORT_2026-04-30_v2.md  CONTRIBUTING.md  LICENSE  MIGRATION_PLAN.md  OPTIMIZATION_REPORT_1.md  OPTIMIZATION_REPORT_2.md  OPTIMIZATION_REPORT_3.md  OPTIMIZATION_REPORT_4.md  OPTIMIZATION_REPORT_5.md  README.md  README_WEB.md  REVIEW_REPORT.md  TODO_V2.md  build.py  comic_viewer.py  comic_viewer_enhance.py  electron-builder.yml  main.py  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  requirements.txt  run.bat  run.sh
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
backend/: .gitignore  package-lock.json  package.json
backend/data/: manhuaviewer.db-shm  manhuaviewer.db-wal
backend/src/: index.js
backend/src/config/: logger.js
backend/src/db/: database.js
backend/src/middleware/: errorHandler.js
backend/src/routes/: api.js  archiveRoutes.js  backupRoutes.js  categoryRoutes.js  configRoutes.js  folderRoutes.js  historyRoutes.js  imageRoutes.js  opdsRoutes.js  settingsRoutes.js  tagRoutes.js
backend/src/services/: archiveService.js  scanService.js  scanTimer.js
backend/tests/: searchParser.test.js
doc/: implementation-plan.md  web-rewrite-feasibility-analysis.md
electron/: main.js
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  index.css  setupTests.js
scripts/: build.py  bump-version.sh
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/db/: migrations.rs  mod.rs  schema.rs
src-tauri/src/models/: mod.rs
src-tauri/src/routes/: archives.rs  categories.rs  history.rs  mod.rs  opds.rs  settings.rs  tags.rs
src-tauri/src/services/: archive.rs  cbz.rs  mod.rs  scanner.rs  thumbnail.rs
src-tauri/src/utils/: search.rs
src/manhuaviewer/: __init__.py  __main__.py  constants.py  data_store.py  preload.py  styles.py  viewer.py
tests/: test_data_store.py  test_preload.py
(+30 files in other folders)
