[project]
name = "manhuaviewer"
version = "0.3.0"
description = "基于 PyQt5 的桌面漫画/图片浏览器，支持单页、双页、长图模式"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "pyqt5>=5.15.11",
    # pyqt5-qt5 在 macOS/Linux 上是 pyqt5 的传递依赖，Windows 上不需要
    # 显式声明带平台标记的版本，帮助包管理器正确解析
    "pyqt5-qt5>=5.15 ; sys_platform != 'win32'",
]

[project.optional-dependencies]
build = ["pyinstaller>=6.13.0"]
dev = ["pytest>=8.0"]

[project.scripts]
manhuaviewer = "manhuaviewer.viewer:main_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/manhuaviewer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
