[package]
name = "manhuaviewer"
version = "3.0.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# Tauri
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"

# Web 框架
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }

# 数据库
rusqlite = { version = "0.31", features = ["bundled"] }

# 图片处理
image = "0.24"

# 压缩包
zip = "0.6"
sevenz-rust = "0.5"

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 异步运行时
tokio = { version = "1", features = ["full"] }

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# 其他
dotenvy = "0.15"
quick-xml = "0.36"
walkdir = "2"
mime_guess = "2"
anyhow = "1"
thiserror = "1"
dirs = "5"
natord = "1"
chrono = "0.4"
base64 = "0.22"
